src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>ReasonforRejection__c</fullName>
        <description>SFDC1-6151 This field helps the user to enter the Reject Reason on Order Form and Trial contracts</description>
        <label>Reason for Rejection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Amendment Required</fullName>
                </value>
                <value>
                    <fullName>Contract Executed by the Customer</fullName>
                </value>
                <value>
                    <fullName>EU Company VAT #</fullName>
                </value>
                <value>
                    <fullName>Incorrect Data Entry</fullName>
                </value>
                <value>
                    <fullName>Incorrect Entity Used</fullName>
                </value>
                <value>
                    <fullName>RAD Approval Required</fullName>
                </value>
                <value>
                    <fullName>Referenced Master Agreement Incorrect/Omitted</fullName>
                </value>
                <value>
                    <fullName>Special Membership Authorization</fullName>
                </value>
                <value>
                    <fullName>Existing Services</fullName>
                </value>
                <value>
                    <fullName>List of Users</fullName>
                </value>
                <value>
                    <fullName>Missing Products</fullName>
                </value>
                <value>
                    <fullName>Missing Required Approval</fullName>
                </value>
                <value>
                    <fullName>Product Not Available to Trial</fullName>
                </value>
                <value>
                    <fullName>Product Offerings Do Not Match Trial Agreement</fullName>
                </value>
                <value>
                    <fullName>Required System Information</fullName>
                </value>
                <value>
                    <fullName>Signed Trial Agreement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecommendedUnitPriceTotal__c</fullName>
        <description>SFDC1-1048 New field Recommended Unit Price Total added to Contracts</description>
        <label>Recommended Unit Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <description>SFDC1-7588 hidden field to be passed in as a filter parameter to Drawloop URL</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field to be passed in as a filter parameter to Drawloop URL</inlineHelpText>
        <label>RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-2159.
Required for a related list of contracts on the case.</description>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RenewalDate__c</fullName>
        <description>SFDC1-9301 : Renewal Date</description>
        <inlineHelpText>Fill the Renewal Date</inlineHelpText>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RenewalNoticePeriod__c</fullName>
        <description>SFDC1-8595 This field holds the notice period for renewals</description>
        <inlineHelpText>Notification to client of renewal pricing change ahead of renewal period for Legacy IHS enter 65 and Legacy Markit please enter 120</inlineHelpText>
        <label>Renewal Notice Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RenewalOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-9301 : Renewal Owner</description>
        <inlineHelpText>Provide the User Name</inlineHelpText>
        <label>Renewal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RenewalOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RenewalTerm__c</fullName>
        <description>SFDC1-7530: field to designate the length of the auto renewal</description>
        <inlineHelpText>Duration of Auto-Renewal</inlineHelpText>
        <label>Renewal Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>18 Months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReplacementContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-1357; Contract Data Model,Related with Contract</description>
        <label>Replacement Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Replaced Contracts</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAPPGId__c</fullName>
        <description>SFDC1-8056 -This field is related to Onboarding process of implementation cases</description>
        <inlineHelpText>Please select SAP PGI’d value</inlineHelpText>
        <label>SAP PGI’d</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceLead__c</fullName>
        <description>SFDC1-6735 : Field related  to  Consulting Record Type</description>
        <inlineHelpText>This Information is Required for SOW/Consulting Contract</inlineHelpText>
        <label>Service Lead</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToCity__c</fullName>
        <description>SFDC1-905 Ship To: City</description>
        <inlineHelpText>Ship To: City</inlineHelpText>
        <label>Ship To: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToClientName__c</fullName>
        <description>SFDC1-905 Ship To: Client Name</description>
        <inlineHelpText>Ship To: Client Name</inlineHelpText>
        <label>Ship To: Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToCompanySAP__c</fullName>
        <label>Ship To: Company SAP #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToContactEmailAddress__c</fullName>
        <description>SFDC1-905 Ship To: Contact Email Address</description>
        <inlineHelpText>Ship To: Contact Email Address</inlineHelpText>
        <label>Ship To: Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ShipToContactFirstName__c</fullName>
        <description>SFDC1-905 Ship To: Contact First Name</description>
        <inlineHelpText>Ship To: Contact First Name</inlineHelpText>
        <label>Ship To: Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToContactLastName__c</fullName>
        <description>SFDC1-905 Ship To: Contact Last Name</description>
        <inlineHelpText>Ship To: Contact Last Name</inlineHelpText>
        <label>Ship To: Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToContactSAP__c</fullName>
        <label>Ship To: Contact SAP #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToContactTelephoneNumber__c</fullName>
        <description>SFDC1-905 Ship To: Contact Telephone Number</description>
        <inlineHelpText>Ship To: Contact Telephone Number</inlineHelpText>
        <label>Ship To: Contact Telephone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToCountryCodeLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7542 This lookup refers to country mentioned in Ship To : Country (text)</description>
        <inlineHelpText>Ship To : Country</inlineHelpText>
        <label>Ship To: Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contracts (Ship To: Country)</relationshipLabel>
        <relationshipName>Contracts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipToCountryCode__c</fullName>
        <description>SFDC1-905 Ship To: Country</description>
        <inlineHelpText>Ship To: Country</inlineHelpText>
        <label>Ship To: Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToPostalZipCode__c</fullName>
        <description>SFDC1-905 Ship To: Postal/Zip Code</description>
        <inlineHelpText>Ship To: Postal/Zip Code</inlineHelpText>
        <label>Ship To: Postal/Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToStateProvince__c</fullName>
        <description>SFDC1-905 Ship To: State/Province</description>
        <inlineHelpText>Ship To: State/Province</inlineHelpText>
        <label>Ship To: State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToStreet__c</fullName>
        <description>SFDC1-905 Ship To: Street</description>
        <inlineHelpText>Ship To: Street</inlineHelpText>
        <label>Ship To: Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoldToCity__c</fullName>
        <description>SFDC1-718;formula field which is connected with Account Billing City</description>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoldToCountry__c</fullName>
        <description>SFDC1-718;Main Address from the Account on the Opportunity</description>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoldToStateProvince__c</fullName>
        <description>SFDC1-718;Main Address from the Account on the Opportunity</description>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoldToStreet__c</fullName>
        <description>SFDC1-718;Main Address from the Account on the Opportunity</description>
        <formula>Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoldToZipPostalCode__c</fullName>
        <description>SFDC1-718;Main Address from the Account on the Opportunity</description>
        <formula>Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialBillingInstructions__c</fullName>
        <description>SFDC1-718; Billing Instruction for a Contract</description>
        <label>Special Billing Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialDeliveryInstructions__c</fullName>
        <description>SFDC1-718;Customer requested Delivery requests</description>
        <label>Special Delivery Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialShippingInstructions__c</fullName>
        <description>SFDC1-4981 This field gives users the ability to fill out Textbox called &quot;Special Shipping Instructions&quot; on Contracts for the Order Form record type
SFDC1-4639 : Changing field type from Text to Long Text Area.</description>
        <label>Special Shipping Instructions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TerminationNotice__c</fullName>
        <description>SFDC1-8595 This fields holds the termination notice period</description>
        <inlineHelpText>Written notice client must provide ahead of next renewal period in order to cancel without penalty</inlineHelpText>
        <label>Termination Notice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>5 days</fullName>
                </value>
                <value>
                    <fullName>10 days</fullName>
                </value>
                <value>
                    <fullName>15 days</fullName>
                </value>
                <value>
                    <fullName>30 days</fullName>
                </value>
                <value>
                    <fullName>45 days</fullName>
                </value>
                <value>
                    <fullName>60 days</fullName>
                </value>
                <value>
                    <fullName>90 days</fullName>
                </value>
                <value>
                    <fullName>120 days</fullName>
                </value>
                <value>
                    <fullName>180 days</fullName>
                </value>
                <value>
                    <fullName>365 days</fullName>
                </value>
                <value>
                    <fullName>1095 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalContractValue__c</fullName>
        <description>SFDC1-5405 Adding Total Contract Value field</description>
        <label>Total Contract Value</label>
        <summarizedField>ContractLineItem__c.TotalPriceFromOpportunityLineItem__c</summarizedField>
        <summaryForeignKey>ContractLineItem__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UsageReportsRequired__c</fullName>
        <description>SFDC1-9301 : Usage Reports Required or Not</description>
        <inlineHelpText>Usage Reports Required : Yes or No</inlineHelpText>
        <label>Usage Reports Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VATTaxID__c</fullName>
        <description>SFDC1-2405 VAT/Tax ID</description>
        <formula>Account.VATTaxID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>VAT/Tax ID</inlineHelpText>
        <label>VAT/Tax ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <description>SFDC1-1048 New field Variance added to Contracts</description>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>Contracts_with_Type</fullName>
        <columns>CONTRACT.CREATED_DATE</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ContractStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>Contracts with Type</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>SAPPGIdNew</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SAPPGId__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>SAP PGI&apos;d New</label>
        <sharedTo>
            <role>OMDelivery</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Consulting</fullName>
        <active>true</active>
        <description>SFDC1-6735: New Record Type Created for SOW/Consulting Usage</description>
        <label>Consulting</label>
    </recordTypes>
    <recordTypes>
        <fullName>ContinuationLetter</fullName>
        <active>true</active>
        <description>SFDC1-905 A new contract record type</description>
        <label>Continuation Letter</label>
    </recordTypes>
    <recordTypes>
        <fullName>DPA</fullName>
        <active>true</active>
        <description>SFDC1-7508: Contract Record Type - Data Protection Agreement for creating MST contract from Account</description>
        <label>DPA</label>
    </recordTypes>
    <recordTypes>
        <fullName>ManagedServiceTerms</fullName>
        <active>true</active>
        <description>SFDC1-7507 - A new record type for Managed Service Terms (MST)</description>
        <label>Managed Service Terms (MST)</label>
    </recordTypes>
    <recordTypes>
        <fullName>MasterAgreement</fullName>
        <active>true</active>
        <description>A new record type for contract, SFDC1-7189- Renaming &apos;General Agreement&apos; to &apos;Master Agreemant&apos;</description>
        <label>Master Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>NDA</fullName>
        <active>true</active>
        <description>A new record type for contract</description>
        <label>NDA</label>
    </recordTypes>
    <recordTypes>
        <fullName>OrderForm</fullName>
        <active>true</active>
        <description>A new record type for contract</description>
        <label>Order Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trial</fullName>
        <active>true</active>
        <description>A new record type for contract</description>
        <label>Trial</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>ActivityCheckOnContractStatusRejected</fullName>
        <active>true</active>
        <description>SFDC1-6066 ,SFDC1-5673 : Activity is required when contract status is rejected.This validation will only be fired when user skip the stage 4 and activity check is skipped on opportunity.</description>
        <errorConditionFormula>AND(
TEXT(ContractStatus__c) = &quot;Rejected&quot;,
NOT(ISBLANK(Opportunity__c)),
TEXT(Opportunity__r.StageName) = &quot;5-Contracting&quot;, 
Opportunity__r.RecordType.Name = &quot;New Business&quot;, 
NOT(Opportunity__r.ActivityCreated__c) 
)</errorConditionFormula>
        <errorMessage>Associated opportunity must have an activity referenced to it before you reject the contract.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AllApprovalsRequired</fullName>
        <active>true</active>
        <description>SFDC1-6282: All Approvers listed as Internal Approvers need to have their status set to &apos;Approved&apos; in order to move Contract Stage to &quot;Generation.&quot;</description>
        <errorConditionFormula>AND(ISPICKVAL(Status, &quot;Generation&quot;), ISPICKVAL(PRIORVALUE(Status), &quot;InternalApprovals&quot;), NOT( NumApprovalsApproved__c = NumApprovalRequested__c))</errorConditionFormula>
        <errorMessage>All Approvers listed as Internal Approvers need to have their status set to &apos;Approved&apos; in order to move Contract Stage to &quot;Generation.&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AllowOnlyContractOwnerChangeForSG</fullName>
        <active>false</active>
        <description>SFDC1-4739 : Allow Only Contract Owner Change For Specific profile</description>
        <errorConditionFormula>AND(
NOT(ISCHANGED(OwnerId)), 
CONTAINS($Profile.Name, &apos;General&apos;),
$User.Id&lt;&gt;OwnerId 
)</errorConditionFormula>
        <errorMessage>You are not authorized to edit Contracts owned by others.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ApprovalRequired</fullName>
        <active>true</active>
        <description>SFDC1-6282:An Internal Approval must be requested in order to move the Contract Stage to Internal Approvals.</description>
        <errorConditionFormula>AND(ISPICKVAL(Status, &quot;InternalApprovals&quot;), (NumApprovalRequested__c = 0 ))</errorConditionFormula>
        <errorMessage>An Internal Approval must be requested in order to move the Contract Stage to Internal Approvals.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractEndDateFilter</fullName>
        <active>true</active>
        <description>SFDC1-5386: Contract End Date cannot be set to a date prior to Contract Start Date</description>
        <errorConditionFormula>(EndDate &lt; StartDate)</errorConditionFormula>
        <errorMessage>Contract End Date cannot be set to a date prior to Contract Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractedPriceIncreaseForOrderForm</fullName>
        <active>true</active>
        <description>SFDC1-5201 Contracted Price Increase required if &quot;Price Increase Clause&quot; is &quot;Notification - Contracted percent increase&quot; OR &quot;No Notification - Contracted percent increase&quot;</description>
        <errorConditionFormula>AND (
 RecordType.Name == &apos;Order Form&apos;,
 OR (
ISPICKVAL(PriceIncreaseClause__c,&apos;Notification - Contracted Percent Increase&apos;),
ISPICKVAL(PriceIncreaseClause__c,&apos;No Notification - Contracted Percent Increase&apos;)
),
ISBLANK( ContractedPriceIncrease__c )
)</errorConditionFormula>
        <errorDisplayField>ContractedPriceIncrease__c</errorDisplayField>
        <errorMessage>Contracted Price Increase&apos; is required for order form when &apos;Price Increase Clause&apos; is Notification - Contracted Percent Increase/ No Notification - Contracted Percent Increase</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CorporateCompliaceInternalApprovalReq</fullName>
        <active>true</active>
        <description>SFDC1-7774: Prevent a user from progressing on an Order Form without receiving Approval when needed for Corporate Compliance
SFDC1-8355 Update logic to use the new Opportunity&apos;s Compliance Restrictions field.
SFDC1-8822 Update</description>
        <errorConditionFormula>AND( 
    RecordType.Name == &apos;Order Form&apos;, 
    NOT(ISNEW()),
    OR( 
        ISPICKVAL(Status, &quot;Generation&quot;), 
        ISPICKVAL(Status, &quot;ReadyForProcessing&quot;)
    ), 
    NOT(ISPICKVAL(PRIORVALUE(Status), &quot;Creation&quot;)),    
    NumCorporateComplianceApprovalsApproved__c == 0,
    Opportunity__r.ComplianceRestrictions__c != &apos;&apos;
)</errorConditionFormula>
        <errorDisplayField>ContractStatus__c</errorDisplayField>
        <errorMessage>The customer associated with this contract has compliance restrictions and requires approval. Please create an Internal Approval and send to Corporate Compliance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DoNotAllowContractRecordTypeChange</fullName>
        <active>true</active>
        <description>SFDC1-5413 This rule does not allow anyone apart from System Administrator to change contract record type.</description>
        <errorConditionFormula>AND (
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;IHSMarkit System Admin&quot;, 
ISCHANGED(RecordTypeId)
)</errorConditionFormula>
        <errorMessage>Contract Record type cannot be updated once record is created. Please contact your System Administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DoNotAllowMarkTheStageAsComplete</fullName>
        <active>true</active>
        <description>SFDC1-6032 restrict Nonadmin users update stage complete. Added Ischanged so not fire unnecessarily.
SFDC1-7189 Updated &apos;General Agreement&apos; to &apos;Master Agreement&apos;
SFDC1-7855: can be set completed by OM
SFDC1-8872: CC and Delivery allowed also</description>
        <errorConditionFormula>AND ( RecordType.Name &lt;&gt; &quot;NDA&quot;,
RecordType.Name &lt;&gt; &quot;Master Agreement&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;IHSMarkit System Admin&quot;,
NOT(CONTAINS($Profile.Name, &apos;Delivery&apos;)),
NOT(CONTAINS($Profile.Name, &apos;Customer Care&apos;)),
NOT(CONTAINS($Profile.Name, &apos;Order Management&apos;)),
ISCHANGED(Status), 
ISPICKVAL(Status, &quot;Complete&quot;) 
)</errorConditionFormula>
        <errorMessage>Contract can&apos;t be marked as Complete. Please contact your System Administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EffectiveDateLessThanContractStartDate</fullName>
        <active>true</active>
        <description>SFDC1-5489 This validation ensures effective date is before or equal the Contract Start Date</description>
        <errorConditionFormula>AND( 
	OR ( 
	RecordType.Name = &apos;Order Form&apos;, 
	RecordType.Name = &apos;Trial&apos;,
	RecordType.Name = &apos;Continuation Letter&apos;
	),
	NOT(ISNEW()),
	EffectiveDate__c &gt;  StartDate,
	AND( 
		NOT(ISCHANGED( IHSMarkitLegalEntityStreet__c )), 
		NOT(ISCHANGED( BillToClientName__c )), 
		NOT(ISCHANGED( GlobalAllianceAddressCity__c)), 
		NOT(ISCHANGED( ShipToCity__c )),
		NOT(ISCHANGED( ClientNoticeAddressCity__c)),
		NOT(ISCHANGED( ClientLegalEntityCity__c))		
	) 
)</errorConditionFormula>
        <errorMessage>The Effective Date must be before or equal the Contract Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GeneralAgreementForFastrackOrderForm</fullName>
        <active>true</active>
        <description>SFDC1-5851 General Agreement Type and Agreement Effective Date is mandatory on Non Fastrack Order Forms.
SFDC1-6916 changes for opportunity record type &apos;Gratis&apos;, since it cannot have an amount.</description>
        <errorConditionFormula>AND(  
	RecordType.Name == &apos;Order Form&apos;, 
	NOT(ISNEW()),
	Fastrack__c == FALSE, 
        Opportunity__r.RecordType.Name&lt;&gt;&apos;Gratis&apos;,
        OR(
                TEXT(Status) == &apos;Generation&apos;,
                TEXT(Status) == &apos;ReadyforProcessing&apos;),
	ByPassValidationsForProcessBuilder__c == FALSE, 
	NOT(ISCHANGED(ByPassValidationsForProcessBuilder__c)),
	NOT(ISCHANGED(TotalContractValue__c)),
	NOT(ISCHANGED(FirstYearContractValue__c)),
	OR( 
		ISBLANK(TEXT(GeneralAgreementType__c)),
		AND (
				ISPICKVAL(GeneralAgreementType__c,&apos;Other&apos;)
				,
		ISBLANK(GeneralAgreementDate__c)
		)
	)	 
)</errorConditionFormula>
        <errorMessage>Master Agreement Type and Agreement Effective Date is mandatory on Non Fastrack Order Forms, please update the Contract accordingly to proceed further.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GeneralAgreementRequiredOnOrderForm</fullName>
        <active>true</active>
        <description>SFDC1-5851 General Agreement mandatory when General Agreement Type is &quot;IHS Markit General Agreement&quot; or &quot;Markit General Agreement&quot;
SFDC1-7189 Updating error for Master Agreement</description>
        <errorConditionFormula>AND (
  RecordType.Name == &apos;Order Form&apos;,
  OR (
  ISPICKVAL( GeneralAgreementType__c , &apos;IHS Markit Master Agreement&apos;),
  ISPICKVAL( GeneralAgreementType__c , &apos;IHS General Agreement&apos;),
  ISPICKVAL( GeneralAgreementType__c , &apos;IHS Master Agreement&apos;),
  ISPICKVAL( GeneralAgreementType__c , &apos;Markit Master Agreement&apos;)
  ),
  ISBLANK(GeneralAgreement__c) 
)</errorConditionFormula>
        <errorMessage>Master Agreement is required when Master Agreement Type is not &quot;Other&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GeneralAgreementValueMandatory</fullName>
        <active>true</active>
        <description>SFDC1-2209 General Agreement value cannot be blank when General Agreement Type is selected as 
SFDC1-5851 Changing error message as per requirement
SFDC1-7189 Updating error for Master Agreement</description>
        <errorConditionFormula>AND(
	(TEXT(GeneralAgreementType__c)=&quot;Other&quot;),
	ISBLANK( GeneralAgreementValue__c)
)</errorConditionFormula>
        <errorMessage>Please enter the Other Agreement Name  when Master Agreement Type is selected as &apos;Other&apos;</errorMessage>
    </validationRules>
</CustomObject>